--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,12 +10,96 @@
     <link rel="stylesheet" href="style.css">
     <title>Samuel Miller</title>
 </head>
+
 <body>
-    <div class="min-vh-100" id="display">
-        
+    <div id="display" class="text-white-50">
+        <div class="container">
+            <div class="row d-flex align-items-center min-vh-100 py-5">
+                <div class="col-md-8 text-center">
+                    <h2 class="font-rock">What's going on you virgin nerds ?</h2>
+                    <h1>It's me, <span class="font-lobster">Samuel Miller</span></h1>
+                </div>
+                <div class="col-md-4">
+                    <div class="img">
+                        <img src="images/display.jpg" alt="" class="img-fluid rounded-pill">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    
+    <div class="container mt-5 py-5 text-center">
+        <h1>What do I do ?</h1>
+        <div class="row">
+            <div class="col-md-4 col-12 mt-3">
+                <div class="my-card py-3 px-2">
+                    <div class="img p-3">
+                        <img src="images/card1.jpg" alt="" class="img-fluid rounded-pill">
+                    </div>
+                    <div class="text mt-3">
+                        <h2>Write shitty codes</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-12 mt-3">
+                <div class="my-card py-3 px-2">
+                    <div class="img p-3">
+                        <img src="images/card2.jpg" alt="" class="img-fluid rounded-pill">
+                    </div>
+                    <div class="text mt-3">
+                        <h2>Make nonsense videos</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 col-12 mt-3">
+                <div class="my-card py-3 px-2">
+                    <div class="img p-3">
+                        <img src="images/card3.jpg" alt="" class="img-fluid rounded-pill">
+                    </div>
+                    <div class="text mt-3">
+                        <h2>Play with "PP"</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bg-danger text-white">
+        <div class="container py-5 text-center">
+            <h1>Welcome to my Youtube channel</h1>
+            <hr>
+            <div class="row d-flex align-items-center">
+                <div class="col-lg-4 col-md-6 col-12 mt-3">
+                    <div class="img">
+                        <img src="images/youtube.jpg" alt="" class="img-fluid rounded shadow">
+                    </div>
+                </div>
+                <div class="col-lg-8 col-md-6 col-12 mt-3">
+                    <div>
+                        <img src="images/subscribe.PNG" alt="">
+                    </div>
+                    <div class="mt-3">
+                        <a target="_blank"
+                            href="https://www.youtube.com/channel/UCJKYubtV1bfbhS-SxTm9Z1A?sub_confirmation=1"
+                            class="btn btn-danger shadow-lg px-5" style="border: 1px solid #fff">
+                            <h5 class="m-0">SUBSCRIBE</h5>
+                        </a>
+                    </div>
+                    <div class="mt-3">
+                        <p>I create nonsense videos on the peoples who are born to be roasted.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="bg-dark text-white-50 text-center">
+        <div class="container py-5">
+            <p>Copyright &copy; 2021 Samuel Miller | Developed by <a target="_blank"
+                    href="https://faisal12ka4.tk">Faisal12ka4</a>
+            </p>
+        </div>
+    </footer>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
